Dependency Updates (#55)
* Bump duracloud versions
* Dependency updates
* Spring Framework to 5
* Spring Data to 2.7
* Spring Security to 5
* Apache Tiles to 3
* Hibernate Validator to 5.4
* Various managed dependencies for resolving conflicts
* Spring data api updates
* Spring security api updates
* Remove static init so the default strategy is used
* When getting SecurityContext, use the strategy holder
* Quality of life changes
* Remove dead code
* Fix missing arguments in logging statements
* Unwrap object arrays in logging statements
* Other minor api changes
* Spring java config updates
* Hibernate validator api updates
* Tiles updates
* Replaces xml config with java for easier migrations
* Updates to Tiles API
* Spring xml updates
* Remove version where possible
* Update security password encoder bean
* Web xml updates
* xmlns cleanup
* add init param in order to remove servlet xml
* Update spring framework and security versions
* Bump aws sdk version; switch to aws sdk bom
* Move exclusion for commons-logging
* Update jsoup
* Bump xstream
* Bump spring versions to latest point release