@@ -56,8 +56,8 @@ public class DuplicationInfoTest {
         dupInfo.addSpaceCount(primaryStoreId, "space2", 2);
         primaryCounts = dupInfo.getSpaceCounts(primaryStoreId);
         assertEquals(2, primaryCounts.size());
-        assertEquals(new Long(1), primaryCounts.get("space1"));
-        assertEquals(new Long(2), primaryCounts.get("space2"));
+        assertEquals(Long.valueOf(1), primaryCounts.get("space1"));
+        assertEquals(Long.valueOf(2), primaryCounts.get("space2"));
 
         // Check secondary space counts
         String secStoreId = "secondary";
@@ -68,8 +68,8 @@ public class DuplicationInfoTest {
         dupInfo.addSpaceCount(secStoreId, "space2", 2);
         secondaryCounts = dupInfo.getSpaceCounts(secStoreId);
         assertEquals(2, secondaryCounts.size());
-        assertEquals(new Long(1), secondaryCounts.get("space1"));
-        assertEquals(new Long(2), secondaryCounts.get("space2"));
+        assertEquals(Long.valueOf(1), secondaryCounts.get("space1"));
+        assertEquals(Long.valueOf(2), secondaryCounts.get("space2"));
 
         // Check tertiary space counts
         String terStoreId = "tertiary";
@@ -79,7 +79,7 @@ public class DuplicationInfoTest {
         dupInfo.addSpaceCount(terStoreId, "space1", 1);
         tertiaryCounts = dupInfo.getSpaceCounts(terStoreId);
         assertEquals(1, tertiaryCounts.size());
-        assertEquals(new Long(1), tertiaryCounts.get("space1"));
+        assertEquals(Long.valueOf(1), tertiaryCounts.get("space1"));
     }
 
 }
